# rating_engine

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  scratch.py
.github/workflows/: ci.yml
api/: __init__.py  main.py  models.py
docs/: new_nodes_guide.md  nodes_reference.md  performance_guide.md  project_summary.md  tutorial.md  user_guide.md
engine/: fingerprint.py  graph.py  loader.py  metadata.py  nodes.py  profiler.py  tables.py  validation.py
examples/: api_client_example.py  export_traces.py  visualize_tariff.py
sandbox/: simulate.py
tariffs/motor_private/2024_09/: tariff.yaml
tariffs/motor_private/2024_09/tables/: base_premium.csv  driver_age_factor.csv  vehicle_brand_category.csv  vehicle_brand_coefs.csv  zoning.csv  zoning_coefs.csv
tests/: test_api.py  test_graph.py  test_integration.py  test_loader.py  test_loader_new_nodes.py  test_loader_with_tables.py  test_metadata.py  test_new_nodes.py  test_nodes.py  test_performance.py  test_tables.py
tests/fixtures/: test_age_factors.csv  test_brands.csv  test_tariff_with_tables.yaml
tools/: __init__.py  interactive_viz.py  visualize.py
